# futures-cancel

./: Cargo.toml  README.md
examples/: cancel_with.rs  cancel_with_timeout.rs  cancellation_token.rs  cancellation_token_with_timeout.rs
src/: lib.rs
