[package]
edition = "2021"
name = "futures-cancel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["time"] }
tokio-util = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.8"

[features]
cancellation-token = ["tokio-util"]
default = ["cancellation-token"]

[[example]]
name = "cancellation_token"
required-features = ["cancellation-token"]


[[example]]
name = "cancellation_token_with_timeout"
required-features = ["cancellation-token"]
